Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18333

Properties window displayed but can't be closed when init fails

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Trivial
    • 0.4.15
    • Shell
    • None

    Description

      Using : reactos-bootcd-0.4.15-dev-4946-ge9a129c-x86-gcc-lin-dbg

      Go to NT Object Namespace in explorer, then "Device"

      On any item, right click > properties

      A Properties window is displayed but can't be closed (OK, Cancel and X have no action)

      It seems that SH_ShowPropertiesDialog in "dll/win32/shell32/dialogs/fprop.cpp" is not robust to the case where no page is added (and in this case should the property window be displayed ?)

      Log :

      MessageSFVCB unimplemented 8 00000000 00000000
      MessageSFVCB unimplemented 8 00000000 00000000
      MessageSFVCB unimplemented 8 00000000 00000000
      MessageSFVCB unimplemented 8 00000000 00000000
      MessageSFVCB unimplemented 8 00000000 00000000
      MessageSFVCB unimplemented 8 00000000 00000000
      MessageSFVCB unimplemented 8 00000000 00000000
      err:(dll/win32/shell32/dialogs/filedefext.cpp:1265) DragQueryFileW failed
      err:(dll/win32/shell32/dialogs/fprop.cpp:141) Initialize failed
      (sdk/lib/rtl/path.c:946) RtlQueryEnvironmentVariable_U("=::") returned 0xc0000100

      Attachments

        Activity

          People

            KRosUser KRosUser
            KRosUser KRosUser
            Votes:
            2 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: