[SHELL32] Fix property sheets that can't be closed due to failed init

[SHELL32] Fix property sheets that can't be closed due to failed init

CORE-18333